--- a/deployment.yaml
+++ b/deployment.yaml
@@ -17,7 +17,7 @@ spec:
     spec:
       containers:
       - name: petclinic
-        image: petclinic:latest
+        image: ashwini73/petclinic:latest
         ports:
         - containerPort: 8080
         resources:
