--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,10 +9,17 @@ env:
   IMAGE_NAME: spring-petclinic
 
 jobs:
+          
   push_to_registry:
     name: Push Docker image to Docker Hub
     runs-on: ubuntu-latest
     steps:
+      - name: Docker Login      
+        uses: docker/login-action@v3.3.0
+        with:
+          username: ashwini73
+          password: ashwini@7321
+        
       - name: Check out the repo
         uses: actions/checkout@v3
 
