--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,7 +17,7 @@ jobs:
         uses: docker/login-action@v3.3.0
         with:
           username: ashwini73
-          password: ashwini@7321
+          password: ${{ secrets.DOCKER_HUB_PASSWORD }}
         
       - name: Check out the repo
         uses: actions/checkout@v3
