--- a/.github/workflows/GKE_deployment.yaml
+++ b/.github/workflows/GKE_deployment.yaml
@@ -1,11 +1,15 @@
 name: Deploy to GKE
 
+# on:
+#   workflow_run:
+#     workflows:
+#       - Build and Push Docker Image
+#     types:
+#       - completed
+
 on:
-  workflow_run:
-    workflows:
-      - Build and Push Docker Image
-    types:
-      - completed
+  push:
+    branches: "main"
 
 env:
   REGISTRY: docker.io/ashwini73
