--- a/.github/workflows/GKE_deployment.yaml
+++ b/.github/workflows/GKE_deployment.yaml
@@ -1,15 +1,11 @@
 name: Deploy to GKE
 
-# on:
-#   workflow_run:
-#     workflows:
-#       - Build and Push Docker Image
-#     types:
-#       - completed
-
 on:
-  push:
-    branches: "main"
+  workflow_run:
+    workflows:
+      - Build and Push Docker Image
+    types:
+      - completed
 
 env:
   REGISTRY: docker.io/ashwini73
@@ -20,15 +16,9 @@ jobs:
     name: Deploy to GKE
     runs-on: ubuntu-latest
     steps:
-      - name: Download Image Tag
-        uses: actions/download-artifact@v3
-        with:
-          name: image-info
-        id: image
-
-      - name: Extract Image Tag
+      - name: Retrieve Image Tag
         run: |
-          IMAGE_TAG=$(cat IMAGE_TAG)
+          IMAGE_TAG="${{ github.event.workflow_run.outputs.image_tag }}"
           echo "IMAGE_TAG=${IMAGE_TAG}" >> $GITHUB_ENV
 
       - name: Set up GCP credentials
@@ -45,6 +35,6 @@ jobs:
         run: |
           gcloud container clusters get-credentials test-gke --zone us-east1-b --project platform-infra
 
-      - name: Update Deployment Image
+      - name: Deploy to GKE
         run: |
-          kubectl set image deployment/spring-petclinic spring-petclinic=${{ env.IMAGE_TAG }}
+          kubectl set image deployment/spring-petclinic spring-petclinic=${IMAGE_TAG}
