--- a/.github/workflows/GKE_deployment.yaml
+++ b/.github/workflows/GKE_deployment.yaml
@@ -42,7 +42,7 @@ jobs:
 
       - name: Configure kubectl
         run: |
-          gcloud auth activate-service-account --key-file=/path/to/key.json
+          gcloud auth activate-service-account --key-file=/tmp/gcp-key.json
           gcloud container clusters get-credentials test-gke --zone us-east1-b --project platform-infra
 
       - name: Deploy to GKE
